cluster-setup/traefik/dashboard/templates/traefik-dashboard-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ${SERVICE_NAME}-dashboard-redirect
  namespace: ${NAMESPACE}
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`${SERVICE_NAME}.local`) || Host(`${DOMAIN}`)
    middlewares:
    - name: redirect-to-https
      namespace: ${NAMESPACE}
    services:
    - kind: TraefikService
      name: api@internal
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: ${NAMESPACE}
spec:
  redirectScheme:
    scheme: https
    permanent: true
